--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+     <!-- Api de Google Fonts -->
+
+      <!-- Hojas de estilo personalizadas -->
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <header>
+        
+    </header>
     
 </body>
 </html>
