--- a/index.html
+++ b/index.html
@@ -4,14 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-     <!-- Api de Google Fonts -->
+    <!-- Api de Google Fonts -->
+    <link rel="preconect" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext">
 
-      <!-- Hojas de estilo personalizadas -->
-    <link rel="stylesheet" href="./styles.css">
+    <!-- Hojas de estilo personalizadas -->
+    <link rel="stylesheet" href="./indexStyles.css">
 </head>
 <body>
     <header>
-        
+        <nav>
+            <div class="sync">
+            <img src="./assets/favicon.png" alt="Icono calendario">
+            <p>Sync</p>
+            </div>
+            <div>
+                 <ul>
+        <li><a href="PORNER BIEN">DESCRIPTIONS</a></li>
+        <li><a href="">FEATURES</a></li>
+        <li><a href="">SCREENS & TOOLS</a></li>
+        <li><a href="">EXTRA</a></li>
+        <li><a href="">DOWNLOADS</a></li>
+      </ul>
+            </div>
+        </nav>
+
+
     </header>
     
 </body>
