Dando forma a la navbar

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <!-- Api de Google Fonts -->
-    <link rel="preconect" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
     <!-- Hojas de estilo personalizadas -->
     <link rel="stylesheet" href="./indexStyles.css">
@@ -13,19 +16,18 @@
 <body>
     <header>
         <nav>
-            <div class="sync">
-            <img src="./assets/favicon.png" alt="Icono calendario">
-            <p>Sync</p>
+            <div class="content-nav">
+            <img src="./assets/logo.png" alt="Icono calendario">
             </div>
-            <div>
-                 <ul>
-        <li><a href="PORNER BIEN">DESCRIPTIONS</a></li>
-        <li><a href="">FEATURES</a></li>
-        <li><a href="">SCREENS & TOOLS</a></li>
-        <li><a href="">EXTRA</a></li>
-        <li><a href="">DOWNLOADS</a></li>
-      </ul>
-            </div>
+            
+            <ul>
+                <li><a href=>DESCRIPTION</a></li>
+                <li><a href="">FEATURES</a></li>
+                <li><a href="">SCREENS</a></li>
+                <li><a href="">EXTRA</a></li>
+                <li><a href="">DOWNLOAD</a></li>
+            </ul>
+            
         </nav>
 
 
