Añadiendo mas cosas a las nav bar

--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
     <header>
         <nav>
             <div class="content-nav">
-            <img src="./assets/logo.png" alt="Icono calendario">
+            <img src="./assets/logo.png" alt="Logotipo">
             </div>
             
             <ul>
-                <li><a href=>DESCRIPTION</a></li>
-                <li><a href="">FEATURES</a></li>
+                <li><a href="">DESCRIPTION</a></li>
+                <li><a href="">FEATURES</a>
                 <li><a href="">SCREENS</a></li>
-                <li><a href="">EXTRA</a></li>
+                <li>
+                    <a href="">EXTRA</a>
+                    <img src="./assets/down-arrow.png" alt="down dart">
+                </li>
                 <li><a href="">DOWNLOAD</a></li>
             </ul>
             
