--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <li><a href="">FEATURES</a>
                 <li><a href="">SCREENS</a></li>
                 <li>
-                    <a href="">EXTRA</a>
-                    <img src="./assets/down-arrow.png" alt="down dart">
+                    <a href="1">EXTRA</a>
+                    <img src="./assets/down-arrow.png" alt="down dart" href="">
                 </li>
-                <li><a href="">DOWNLOAD</a></li>
+                <li><button type="submit" class="button-down"href="">DOWNLOAD</button></li>
             </ul>
             
         </nav>
