--- a/index.html
+++ b/index.html
@@ -15,18 +15,22 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navbar">
             <div class="content-nav">
             <img src="./assets/logo.png" alt="Logotipo">
             </div>
             
             <ul>
-                <li><a href="">DESCRIPTION</a></li>
-                <li><a href="">FEATURES</a>
-                <li><a href="">SCREENS</a></li>
-                <li>
-                    <a href="1">EXTRA</a>
-                    <img src="./assets/down-arrow.png" alt="down dart" href="">
+                <li><a href="#">DESCRIPTION</a></li>
+                <li><a href="#">FEATURES</a>
+                <li><a href="#">SCREENS</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">EXTRA ▾ </a>
+                    <ul class="menu">
+                        <li class="menu-two"><a href="#"></a>ARTICLE DETAILS</li>
+                        <li class ="menu-two"><a href="#"></a>TERMS CONDITIONS</li>
+                        <li class="menu-two"><a href="#"></a>PRIVACY POLICY</li>
+                    </ul>
                 </li>
                 <li><button type="submit" class="button-down"href="">DOWNLOAD</button></li>
             </ul>
