cambio de nombre style

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles-Index.css">
-   
+    <link rel="stylesheet" href="navbarStyle.css">
+    <link rel="icon" type="image/png" href="./assets/favicon.png">
     <title>Menú Desplegable</title>
 
      <!-- Api de Google Fonts -->
