Iconos apple y Android

--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--Hojas de estilos-->
     <link rel="stylesheet" href="navbarStyle.css">
+    <link rel="stylesheet" href="index.css">
+
+    <!-- Icono favicon en barra de navegacion-->
     <link rel="icon" type="image/png" href="./assets/favicon.png">
+
     <title>Menú Desplegable</title>
 
-     <!-- Api de Google Fonts -->
+    <!-- Api de Google Fonts -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="stylesPrueba.css">
+
+    <!--Link iconos-->
+
+    <script src="https://kit.fontawesome.com/83c6a3b014.js" crossorigin="anonymous"></script>"
+
 </head>
 <body>
     <header>
@@ -32,10 +42,20 @@
                     <a href="#">PRIVACY POLICY</a>
                 </div>
             </li>
-            <li><button type="submit" class="button-down"href="">DOWNLOAD</a></li>
+            <li><button type="submit" class="button-down"href="">DOWNLOAD</li>
         </ul>
     </nav>
     </header>
+    <main>
+        <div class="text"><h1>Mobile App Landing Page</h1>
+        <p>Start focusing on your goals and get more things done with Sync mobile application. It´s the first app to harness de power of social connections to help you stay focused and get organized </p>
+        </div>
+
+        <div class="downloads">
+            <button  type="button" class="button-apple" href=""><i class="fa-brands fa-apple" style="color: #feffff;"></i>   DOWNLOAD</button>
+            <button  type="button" class="button-android" href=""><i class="fa-brands fa-google-play" style="color: #feffff;"></i>   DOWNLOAD</button>
+             </div>
+    </main>
 
 </body>
-</html>
+</html>b
