--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!--Link iconos-->
 
-    <script src="https://kit.fontawesome.com/83c6a3b014.js" crossorigin="anonymous"></script>"
+    <script src="https://kit.fontawesome.com/83c6a3b014.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -54,8 +54,13 @@
         <div class="downloads">
             <button  type="button" class="button-apple" href=""><i class="fa-brands fa-apple" style="color: #feffff;"></i>   DOWNLOAD</button>
             <button  type="button" class="button-android" href=""><i class="fa-brands fa-google-play" style="color: #feffff;"></i>   DOWNLOAD</button>
-             </div>
+        </div>
+
+        <div >
+            <img class="index-phone" src="./assets/header-iphone.png" alt="smartphone">
+
+        </div>
     </main>
 
 </body>
-</html>b
+</html>
