Botones con brillo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
 
     <!--Hojas de estilos-->
     <link rel="stylesheet" href="navbarStyle.css">
@@ -30,20 +31,20 @@
     <nav class="navbar">
         <div class="content-nav">
             <img src="./assets/logo.png" alt="Logotipo">
-            </div>
+        </div>
         <ul>
-            <li id="bar-color"><a href="#description">DESCRIPITION</a></li>
-            <li id="bar-color"><a href="#">FEATURES</a></li>
-            <li id="bar-color"><a href="#">SCREENS</a></li>
-            <li class="dropdown">
-                <a href="#" class="dropbtn">EXTRAS ▾</a>
+            <li id="bar-color"><a href="#favorite-section" >DESCRIPITION</a></li>
+            <li id="bar-color"><a href="#features" >FEATURES</a></li>
+            <li id="bar-color"><a href="#screen">SCREENS</a></li>
+            <li class="dropdown" id="bar-color">
+                <a  href="#extras" class="dropbtn">EXTRAS ▾</a>
                 <div class="dropdown-content">
-                    <a href="#">ARTICLE DETAILS</a>
-                    <a href="#">TERMS CONDITIONS </a>
-                    <a href="#">PRIVACY POLICY</a>
+                    <a id="ext">ARTICLE DETAILS</a>
+                    <a id="ext">TERMS CONDITIONS </a>
+                    <a id="ext">PRIVACY POLICY</a>
                 </div>
             </li>
-            <li><button type="submit" class="button-down"href="https://femcoders.factoriaf5.org/">DOWNLOAD</li>
+            <li><a href="https://femcoders.factoriaf5.org/" class="button-down " target="_blank"> DOWNLOAD</a></li>
         </ul>
     </nav>
     </header>
@@ -147,14 +148,14 @@
                 <div class="privacy-text">
                     <p><b> Schedule task </b>  to keep track of their completion. Sync provides multiple scheduling options including alarms  and reminders.</p><br>
 
-                    <ul id="checkbox-list">
-                        <li ><i class="fa-regular fa-square-check" style="color: #19ca94;"></i>    You can always add a new tasks or charget the settings of existing ones in your calendar view or the app control panel</li>
+                    <div id="checkbox-list">
+                        <p><i class="fa-regular fa-square-check" style="color: #19ca94;"></i>    You can always add a new tasks or charget the settings of existing ones in your calendar view or the app control panel.</p><br>
 
-                        <li ><i class="fa-regular fa-square-check" style="color: #19ca94;"></i>   It's easy to stay focused on your most important daily activities than will get your closer to meeting your goals</li>
+                       <p> <i class="fa-regular fa-square-check" style="color: #19ca94;"></i>   It's easy to stay focused on your most important daily activities than will get your closer to meeting your goals</p><br>
 
 
-                        <li ><i class="fa-regular fa-square-check" style="color: #19ca94;"></i>  Use phone reminders to free up your lon terms memory which will reduce stress and make you more productive</li>
-                    </ul>
+                      <p>  <i class="fa-regular fa-square-check" style="color: #19ca94;"></i>  Use phone reminders to free up your long terms memory which will reduce stress and make you more productive.</p><br>
+                    </div>
                     
                 </div>
                 <div>
