--- a/index.html
+++ b/index.html
@@ -175,9 +175,10 @@
             </section>
 
         </div>
-
+        <div class="footer-line"></div>
         
     </main>
+
 
         <!--FOOTER-->
 
