footer casi terminado

--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
                 <ul class="footer-list">
                 
                     <li><h4>Contact info</h4></li>
-                    <li>22 Innovation Street, CA,US</li>
-                    <li>office@syncmobile.com</li>
-                    <li>+44 376 945 23</li>
+                    <li><i class="fa-solid fa-location-dot" style="color: #999999;"></i>  22 Innovation Street, CA,US</li>
+                    <li><i class="fa-solid fa-envelope" style="color: #999999;"></i>  office@syncmobile.com</li>
+                    <li><i class="fa-solid fa-phone" style="color: #999999;"></i>  +44 376 945 23</li>
                 </ul>
 
             </div>
@@ -221,7 +221,10 @@
                 </div>
 
             </div>
+        </div>
         <div class="copiright">
+            <p>Copyright © 2020 Inovatik - All rights reserved</p>
+    
 
         </div>
 
