Cambios hover en botones

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="./description.css" />
     <link rel="stylesheet" href="./footer.css" />
 
+    <!--Medias Querys-->
+
+    <link rel="stylesheet" media="only screen and (max-width: 1200px)" href="index.css">
+    <link rel="stylesheet"  media="only screen and (max-width: 1200px)" href="navbarStyle.css">
+
     <!-- Icono favicon en barra de navegacion-->
     <link rel="icon" type="image/png" href="./assets/favicon.png" />
 
@@ -19,9 +24,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
-        rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"/>
 
     <!--Link iconos-->
 
