--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--Hojas de estilos-->
-    <link rel="stylesheet" href="navbarStyle.css" />
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="./description.css" />
-    <link rel="stylesheet" href="./footer.css" />
+    <link rel="stylesheet" href="/CSS/navbarStyle.css" />
+    <link rel="stylesheet" href="/CSS/index.css" />
+    <link rel="stylesheet" href="/CSS/description.css" />
+    <link rel="stylesheet" href="/CSS/footer.css" />
 
     <!--Medias Querys-->
 
